--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 -e git+https://github.com/datastax/python-driver.git@cassandra-test#egg=cassandra-driver
 # Used ccm version is tracked by cassandra-test branch in ccm repo. Please create a PR there for fixes or upgrades to new releases.
--e git+https://github.com/riptano/ccm.git@cassandra-test#egg=ccm
+#-e git+https://github.com/riptano/ccm.git@cassandra-test#egg=ccm
+-e git+https://github.com/ekaterinadimitrova2/ccm.git@CASSANDRA-15234-3#egg=ccm
 decorator
 docopt
 enum34
